<resources>
    <string name="app_name">내 손 주</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_intro">핸드폰 속 작은 책자</string>
    <string name="team_name">친절한 손주들</string>
    <string name="home">홈</string>
    <string name="guide">친절한 설명서</string>
    <string name="helper">도우미</string>
    <string name="video">동영상 보기</string>
    <string name="user">내 공간</string>
    <string name="test">상단 바</string>
    <string name="setting">설정</string>
    <string name="tv_link">
        <a href ="https://youtu.be/kc2SthzglCM"><b>친절한 손주들 소개</b></a>
       </string>

</resources>