<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="#ffffff"
    android:elevation="5dp"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/btn_bottom_navi_home_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/selector_bottom_navi_home_icon" />

        <TextView
            android:id="@+id/some_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="31dp"
            android:layout_marginBottom="5px"
            android:fontFamily="@font/notosanskr"
            android:text="@string/home"
            android:textColor="#363636"
            android:textSize="11sp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_bottom_navi_guide_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/selector_bottom_navi_guide_icon" />

        <TextView
            android:id="@+id/some_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5px"
            android:fontFamily="@font/notosanskr"
            android:text="@string/guide"
            android:textColor="#363636"
            android:textSize="11sp"

            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/btn_bottom_navi_helper_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="29.8dp"
            android:src="@drawable/selector_bottom_navi_helper_icon" />

        <TextView
            android:id="@+id/some_id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5px"
            android:fontFamily="@font/notosanskr"
            android:text="@string/helper"
            android:textColor="#363636"
            android:textSize="11sp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_bottom_navi_video_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="13dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/selector_bottom_navi_video_icon" />

        <TextView
            android:id="@+id/some_id3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5px"
            android:fontFamily="@font/notosanskr"
            android:text="@string/video"
            android:textColor="#363636"
            android:textSize="11sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_bottom_navi_user_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/selector_bottom_navi_user_icon" />
        <TextView
            android:id="@+id/some_id4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="19dp"
            android:layout_marginBottom="5px"
            android:fontFamily="@font/notosanskr"
            android:text="@string/user"
            android:textColor="#363636"
            android:textSize="11sp"/>

    </RelativeLayout>

</LinearLayout>